test/Fail/Issue2840.err
Issue2840.agda:7.3-13: error: [ShouldEndInApplicationOfTheDatatype]
The target of a constructor must be the datatype applied to its
parameters, _F_2 A isn't
when checking the constructor c in the declaration of D
